# mana-sambharalu

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Home.py  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md  Default.md
.gitlab/merge_request_templates/: Default.md
.streamlit/: config.toml
config/: settings.py
pages/: 1_Dashboard.py  1_Explore.py  2_Contribute.py  2_Explore.py  3_Contribute.py
utils/: api_client.py  ui.py
utils/.streamlit/: config.toml
